Got rid of bullets and fixed vertical alignment
Updated CSS, and fiddled with classes to get a nice grid of friends. Long names still wrap badly, rather than truncating. I'll have to look into some options for that later.

--- a/FBLogin/css/main.css
+++ b/FBLogin/css/main.css
@@ -106,11 +106,15 @@ body {
     height: 28px;
 }
 
+.friend-item {
+    list-style-type: none;
+    display: block;
+}
+
 .friend {
     margin: 4px 4px 4px 4px;
-    padding: 0.5em 4px 4px 4px;
+    padding: 0.5em 4px 4px 1em;
     height: 2em;
-    display: block;
     width: 200px;
     float: left;
     border-bottom-color: rgb(38, 66, 133);
@@ -118,5 +122,5 @@ body {
     border-right-color: rgb(38, 66, 133);
     border-top-color: rgb(38, 66, 133);
     vertical-align: middle;
-    text-align: center;
+    text-align: left;
 }
